--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
+    "react-canvas-animate": "^1.3.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
